Migrate codebase from JavaScript to TypeScript, updating file extensions and adding type definitions

--- a/package.json
+++ b/package.json
@@ -30,44 +30,68 @@
     "winston-transport": "^4.2.0"
   },
   "devDependencies": {
-    "@types/node": "^24.3.0",
+    "@eslint/js": "^9.33.0",
+    "@eslint/json": "^0.13.1",
+    "@eslint/markdown": "^7.1.0",
+    "@types/debug": "^4.1.12",
+    "@types/node": "^20.9.0",
+    "@typescript-eslint/eslint-plugin": "^8.40.0",
+    "@typescript-eslint/parser": "^8.40.0",
     "chai": "^4.0.2",
     "chai-as-promised": "^7.0.0",
     "coveralls": "^3.0.2",
-    "delay": "^3.0.0",
+    "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-mocha": "^11.1.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.3.0",
     "husky": "^0.14.3",
+    "jiti": "^2.5.1",
     "lint-staged": "^15.2.7",
     "mocha": "^5.2.0",
     "mocha-junit-reporter": "^1.18.0",
     "nyc": "^12.0.2",
-    "prettier-standard": "^16.4.1",
+    "prettier": "^3.6.2",
     "prompt-helper": "^2.1.1",
     "rimraf": "^2.6.1",
     "sinon": "^18.0.0",
     "sinon-chai": "^3.7.0",
-    "standard": "^17.1.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.40.0"
   },
-  "main": "lib/index.js",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/cjs/index.js",
+      "require": "./dist/cjs/index.js",
+      "default": "./dist/cjs/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "files": [
-    "lib/",
-    "dist/"
+    "dist/",
+    "src/"
   ],
   "scripts": {
-    "build": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
+    "build": "pnpm run clean && pnpm run build:types && pnpm run build:cjs",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "build:types": "tsc -p tsconfig.types.json",
     "test": "pnpm run test:lint && pnpm run test:cover",
-    "test:lint": "standard {lib,test}/**/*.js",
+    "test:lint": "eslint \"{src,test}/**/*.{ts,js}\"",
     "test:unit": "mocha test/lib/setup.js test/**/*.spec.js",
     "test:cover": "nyc pnpm run test:unit",
     "test:ci": "pnpm run test:lint && pnpm run test:ci:cover && pnpm run test:ci:report",
     "test:ci:cover": "nyc mocha --reporter mocha-junit-reporter test/lib/setup.js test/**/*.spec.js",
     "test:ci:report": "nyc report --reporter text-lcov | coveralls",
-    "format": "prettier-standard {lib,test}/**/*.js",
+    "format": "prettier --write \"{src,test}/**/*.{ts,js,json,md}\"",
     "precommit": "lint-staged",
-    "ph:all": "ph --code lib --code test --code tsconfig.json --code package.json"
+    "ph:all": "ph --code src --code test --code tsconfig.base.json --code tsconfig.json --code tsconfig.cjs.json --code tsconfig.types.json --code package.json"
   },
   "repository": "timdp/winston-aws-cloudwatch",
   "bugs": "https://github.com/timdp/winston-aws-cloudwatch/issues",
